--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 </div>
                 <button id="fetch-news-btn" class="news-button">Fetch News</button>
                 <button id="copy-news-btn" class="news-button">Copy Content</button>
+                <span id="copy-message"></span>
                 <p style="font-size: 0.8rem;">
                     All news content is copyrighted by NHK (Japan Broadcasting Corporation).
                     <br>
