--- a/index.html
+++ b/index.html
@@ -87,26 +87,49 @@
 
             <main class="col-lg">
 
-                <h1>About</a></h1>
+                <h1>About Me</a></h1>
 
-                <p>Welcome! I'm a graduate student at Osaka University, specializing in computational fluid dynamics and
-                    3D bioprinting. With a background in Basic Engineering and hands-on experience in thermal
-                    engineering and research, I bring a unique perspective to the future of biotechnology.</p>
 
-                <p>When not immersed in research, I assist undergraduates at Osaka University's Main Library. My skills
-                    encompass Python, OpenFOAM, TypeScript, HTML/CSS, and machine learning. Join me as we explore the
-                    intersections of technology, biology, and language.</p>
+                <p>I am a graduate student at Osaka University, with a keen interest in computational fluid dynamics and
+                    3D bioprinting. My academic journey began with a Mechanical Engineering degree from the University
+                    of California, Santa Barbara, which ultimately led me to Japan as a MEXT scholar.</p>
+                <p>Outside of my research engagements, I support undergraduates at Osaka University's Main Library. My
+                    skill set includes Python, OpenFOAM, JavaScript, HTML/CSS, and machine learning. I am particularly
+                    intrigued by the convergence of machine learning and biotechnology.</p>
 
-                <h2>NHK NEWS WEB EASY Scraper</h2>
+                <p>Beyond my academic pursuits, I have a diverse range of hobbies. I'm an avid mountain climber and
+                    enjoy the challenges it presents. Travel is another passion of mine, and I value the different
+                    cultural perspectives it offers. Additionally, I engage in online learning to expand my skill set
+                    and often unwind by reading a variety of books.</p>
+
+                <h2>Project Demonstration</h2>
 
                 <div id="newsBox"
                     style="width: 100%; height: 350px; overflow: auto; border: 1px solid black; padding: 10px;">
-                    <!-- News content will be inserted here -->
+                    <h1 style="font-size: 2.5rem; margin-bottom: 20px; text-align: center;"">NHK NEWS WEB EASY Scraper</h1>
+                    <p style=" font-size: 1rem;">Welcome to the NHK NEWS WEB EASY Scraper. This tool helps you fetch
+                        and
+                        display simplified Japanese news articles from the NHK NEWS WEB EASY website. It not only
+                        provides you with the news content, but also extracts key vocabulary and their pronunciations,
+                        along with dictionary definitions where available.</p>
+                        <p style="font-size: 1rem;">To start, simply click on the 'Fetch News' button. You can also copy
+                            the content to your clipboard using the 'Copy Content' button.</p>
+                        <p style="font-size: 1rem;">Please note that news updates occur twice on weekdays, around 12 PM
+                            and 5 PM. During these update periods, the news fetching function may not work correctly. In
+                            addition, please be aware that the 'Fetch News' function extracts a random article from the
+                            four latest headlines on the NHK NEWS WEB EASY website.
+                        </p>
                 </div>
+
+
                 <button id="fetch-news-btn" class="news-button">Fetch News</button>
                 <button id="copy-news-btn" class="news-button">Copy Content</button>
                 <span id="copy-message"></span>
                 <p style="font-size: 0.8rem;">
+                    You can also explore a user-friendly graphical interface version of this tool, developed with
+                    Python. Check it out on this <a href="https://github.com/KORINZ/nhk-news-scraper-gui">GitHub
+                        repository</a>.
+                    <br>
                     All news content is copyrighted by NHK (Japan Broadcasting Corporation).
                     <br>
                     The "NEWS WEB EASY" uses the "Reikai Elementary School Japanese Dictionary 5th Edition" by Sanseido.
@@ -114,7 +137,7 @@
                 </p>
 
 
-                <h2>Contact</a></h2>
+                <h2>Contact Information</a></h2>
 
                 <p>You can reach me by executing the following Python script, which uses ASCII-to-string conversion:</p>
                 <div class="language-plaintext highlighter-rouge">
@@ -124,15 +147,11 @@
                     </div>
                 </div>
 
-                <h2>Message</a></h2>
+                <h2>Research Interests</a></h2>
 
                 <p>lorem ipsum</p>
 
-
-
-
-
-                <h2>Certificates</a></h2>
+                <h2>Courses</a></h2>
 
                 <p>lorem ipsum</p>
 
