Update main index.html location

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1><a href="">KORIN</h1>
 
                     <div class="top-bar">
-                        <span><a href="../ja/index.html" class="language-link">日本語</a></span>
+                        <span><a href="templates/ja/index.html" class="language-link">日本語</a></span>
 
                         <button id="theme-toggler" class="theme-button">
                             <i id="theme-icon" class="fas fa-moon"></i>
@@ -71,9 +71,9 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/gallery.html">Gallery</a></li>
+                                href="templates/common/gallery.html">Gallery</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="../common/projects.html">Projects</a></li>
+                                href="templates/common/projects.html">Projects</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
