Add Strava icon and link

--- a/index.html
+++ b/index.html
@@ -33,25 +33,31 @@
                         <li>
                             <a class="mr-1" href="https://github.com/KORINZ">
                                 <i aria-hidden="true" class="fab fa-github" title="GitHub"></i>
-                                <span class="sr-only">GitHub</span>GitHub
+                                GitHub
                             </a>
                         </li>
                         <li>
                             <a class="mr-1" href="https://www.linkedin.com/in/colin-z/">
                                 <i aria-hidden="true" class="fab fa-linkedin" title="LinkedIn"></i>
-                                <span class="sr-only">LinkedIn</span>LinkedIn
+                                LinkedIn
                             </a>
                         </li>
                         <li>
                             <a class="mr-1" href="https://stackoverflow.com/users/19939086/%e3%82%b3%e3%83%aa%e3%83%b3">
                                 <i aria-hidden="true" class="fab fa-stack-overflow" title="Stack Overflow"></i>
-                                <span class="sr-only">Stack Overflow</span>Stack Overflow
+                                Stack Overflow
                             </a>
                         </li>
                         <li>
                             <a class="mr-1" href="https://twitter.com/japan_korin">
                                 <i aria-hidden="true" class="fab fa-twitter" title="Twitter"></i>
-                                <span class="sr-only">Twitter</span>Twitter
+                                Twitter
+                            </a>
+                        </li>
+                        <li>
+                            <a class="mr-1" href="https://www.strava.com/athletes/107165964">
+                                <i aria-hidden="true" class="fab fa-strava" title="Strava"></i>
+                                Strava
                             </a>
                         </li>
                     </ul>
