Add flipping effect to theme button

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
             });
         });
 
+
+        document.querySelector(".theme-button").addEventListener("click", function () {
+            this.classList.toggle("flipped");
+        });
+
     </script>
 
 </body>
