Update HTML content

--- a/index.html
+++ b/index.html
@@ -143,10 +143,33 @@
                 </div>
 
                 <h2>Research Interests</h2>
-                <p>lorem ipsum</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nulla nobis quod dicta in quidem
+                    minus dolorem dignissimos provident error necessitatibus suscipit quae tenetur aut, ad adipisci.
+                    Nesciunt, odit fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptas
+                    nihil deleniti porro debitis ea vero exercitationem non minus nemo voluptatum ut iusto eum quasi
+                    saepe, facilis fugiat, culpa vitae.</p>
+                <figure>
+                    <p align="center">
+                        <img src="static/printability_setup.png" alt="printability_setup" width="350">
+                    </p>
+                    <figcaption align="center">Figure 1. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Sapiente quisquam, repellat quia itaque rerum eius illo. Consequatur, ea! Aut reprehenderit
+                        dolorum reiciendis nobis ipsum eum ducimus perspiciatis rem illo provident.</figcaption>
+                </figure>
 
-                <h2>Courses</h2>
-                <p>lorem ipsum</p>
+
+
+
+                <h2>Course Certificates</h2>
+                <ul>
+                    <li><a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0">CS50x <i
+                                class="fas fa-external-link-alt"></i></a></li>
+                    <li><a
+                            href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
+                            for Machine Learning: Linear Algebra
+                            <i class="fas fa-external-link-alt"></i></a></li>
+                </ul>
+
 
             </main>
         </div>
