Update HTML content style

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                     <p align="center">
                         <img src="static/printability_setup.png" alt="printability_setup" width="350">
                     </p>
-                    <figcaption align="center">Figure 1. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <figcaption align="center"><strong>Figure 1.</strong> Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit.
                         Sapiente quisquam, repellat quia itaque rerum eius illo. Consequatur, ea! Aut reprehenderit
                         dolorum reiciendis nobis ipsum eum ducimus perspiciatis rem illo provident.</figcaption>
                 </figure>
