Update HTML content

--- a/index.html
+++ b/index.html
@@ -90,16 +90,19 @@
             <main class="col-lg">
 
                 <h2>About Me</h2>
-                <p>I am a graduate student at Osaka University, with a keen interest in computational fluid dynamics and
-                    3D bioprinting. My academic journey began with a Mechanical Engineering degree from the University
-                    of California, Santa Barbara, which ultimately led me to Japan as a MEXT scholar.</p>
-                <p>Outside of my research engagements, I support undergraduates at Osaka University's Main Library. My
-                    skill set includes Python, OpenFOAM, JavaScript, HTML/CSS, and machine learning. I am particularly
-                    intrigued by the convergence of machine learning and biotechnology.</p>
-                <p>Beyond my academic pursuits, I have a diverse range of hobbies. I'm an avid mountain climber and
-                    enjoy the challenges it presents. Travel is another passion of mine, and I value the different
-                    cultural perspectives it offers. Additionally, I engage in online learning to expand my skill set
-                    and often unwind by reading a variety of books.</p>
+                <p>I am a graduate student at Osaka University, where my research focuses primarily on computational
+                    fluid dynamics and 3D bioprinting. My academic journey began with a Bachelor's degree in Mechanical
+                    Engineering from the University of California, Santa Barbara. This solid foundation eventually led
+                    me to Japan, where I am now studying as a MEXT scholar.</p>
+                <p>Apart from my research commitments, I also support Osaka University's Main Library undergraduates. I
+                    am skilled in Python, OpenFOAM, JavaScript, HTML/CSS, and machine learning. The intersection of
+                    machine learning and biotechnology intrigues me, offering an exciting frontier of possibilities.</p>
+                <p>Aside from my academic pursuits, my interests are pretty diverse. I am an avid mountain climber,
+                    finding thrill and challenge in its demanding nature. Traveling is another passion of mine,
+                    providing me with a broader cultural perspective and enriching my worldview. I also fervently
+                    advocate lifelong learning, frequently engaging in online courses to broaden my skills. I often
+                    delve into various books to unwind, finding them an excellent source of relaxation and knowledge.
+                </p>
 
                 <h2>Project Demonstration</h2>
                 <div id="newsBox"
