Update HTML content

--- a/index.html
+++ b/index.html
@@ -168,22 +168,28 @@
 
                 <h2>Course Certificates</h2>
                 <ul>
-                    <li><a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0">CS50x <i
-                                class="fas fa-external-link-alt"></i></a></li>
+                    <li><a href="https://pll.harvard.edu/course/cs50-introduction-computer-science?delta=0">CS50x:
+                            Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a
                             href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
                             for Machine Learning: Linear Algebra
                             <i class="fas fa-external-link-alt"></i></a></li>
+                    <li><a href="https://www.udemy.com/certificate/UC-5a9258b1-d5c0-4a32-85db-a622985fb445/">The Git &
+                            Github Bootcamp
+                            <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
 
+                <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
+                    <i class="fas fa-chevron-up"></i>
+                </a>
 
             </main>
         </div>
     </div>
 
-    <a href="#" id="back-to-top" style="display: none;" class="back-to-top custom-button" role="button">
-        <i class="fas fa-chevron-up"></i>
-    </a>
+
+
+
 
 
     <script src="../../js/calender.js"></script>
