--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h1><a href="">KORIN</a></h1>
 
                     <div class="top-bar">
-                        <span><a href="templates/ja/index.html" class="language-link">日本語</a></span>
+                        <span><a href="templates/ja/index.html" class="language-link"><strong>日本語</strong></a></span>
 
                         <button id="theme-toggler" class="theme-button">
                             <i id="theme-icon" class="fas fa-moon"></i>
