Update icon spacing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </button>
                     </div>
 
-                    <ul style="list-style-type: none; padding: 0;">
+                    <ul style="list-style-type: none; padding: 0;" class="social-links">
                         <li>
                             <a class="mr-1" href="https://github.com/KORINZ">
                                 <i aria-hidden="true" class="fab fa-github" title="GitHub"></i>
