Update HTML script

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </div>
 
-    <script src="../../js/change-theme.js" defer></script>
+    <script src="../../js/change-theme.js"></script>
     <script src="../../js/theme-toggle.js"></script>
     <script src="../../js/sidebar-toggle.js"></script>
     <script src="../../js/calender.js"></script>
