--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <script src="../../js/change-theme.js"></script>
     <script src="../../js/theme-toggle.js"></script>
     <script src="../../js/sidebar-toggle.js"></script>
-    <script src="../../js/calender.js"></script>
+    <script src="../../js/calendar.js"></script>
     <script src="../../js/get-nhk-news.js"></script>
     <script src="../../js/back-to-top-toggle.js"></script>
 
