--- a/index.html
+++ b/index.html
@@ -151,20 +151,20 @@
                 </div>
 
                 <h2>Research Interests</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo nulla nobis quod dicta in quidem
-                    minus dolorem dignissimos provident error necessitatibus suscipit quae tenetur aut, ad adipisci.
-                    Nesciunt, odit fuga. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat voluptas
-                    nihil deleniti porro debitis ea vero exercitationem non minus nemo voluptatum ut iusto eum quasi
-                    saepe, facilis fugiat, culpa vitae.</p>
+                <p>3D extrusion bioprinting is rapidly developing in the field of tissue engineering, enabling the
+                    manufacturing of customized biologically engineered structures. This research attempts to optimize
+                    the shape of the needle, extrusion velocity, printability, and cell viability using numerical
+                    analysis and machine
+                    learning to control the fluid shear stress inside the needle.</p>
                 <figure>
                     <p align="center">
                         <img src="static/printability_setup.png" alt="printability_setup" width="350" loading="lazy">
 
                     </p>
-                    <figcaption align="center"><strong>Figure 1.</strong> Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit.
-                        Sapiente quisquam, repellat quia itaque rerum eius illo. Consequatur, ea! Aut reprehenderit
-                        dolorum reiciendis nobis ipsum eum ducimus perspiciatis rem illo provident.</figcaption>
+                    <figcaption align="center"><strong>Figure 1.</strong> The printability assessment setup is designed
+                        to evaluate and optimize the performance of 3D bioprinting processes, such as bioink extrusion
+                        and filament formation.
+                    </figcaption>
                 </figure>
 
                 <h2>Course Certificates</h2>
