Update HTML theme scripts

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="static/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="../../js/change-theme.js"></script>
+    <script src="../../js/theme-toggle.js"></script>
     <title>Homepage - KORIN</title>
 </head>
 
@@ -158,7 +159,7 @@
                     learning to control the fluid shear stress inside the needle.</p>
                 <figure>
                     <p align="center">
-                        <img src="static/printability_setup.png" alt="printability_setup" width="350" loading="lazy">
+                        <img src="static/printability_setup.png" alt="printability_setup" width="350">
 
                     </p>
                     <figcaption align="center"><strong>Figure 1.</strong> The printability assessment setup is designed
