Update HTML structures

--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="../../js/change-theme.js"></script>
-    <script src="../../js/theme-toggle.js"></script>
     <title>Homepage - KORIN</title>
+    <script>
+        // Check the local storage when the page loads
+        window.onload = function () {
+            var button = document.getElementById('theme-toggler');
+            if (localStorage.getItem('darkMode') === 'true') {
+                document.body.classList.add('dark');
+                button.classList.add('dark');
+                document.getElementById('theme-icon').classList.remove('fas', 'fa-sun');
+                document.getElementById('theme-icon').classList.add('fas', 'fa-moon');
+            } else {
+                button.classList.remove('dark');
+                document.getElementById('theme-icon').classList.remove('fas', 'fa-moon');
+                document.getElementById('theme-icon').classList.add('fas', 'fa-sun');
+            }
+        }
+    </script>
+        
 </head>
 
 <body>
