Update JS file location

--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         </div>
     </div>
 
-    <script src="../../js/change-theme.js"></script>
-    <script src="../../js/sidebar-toggle.js"></script>
-    <script src="../../js/calendar.js"></script>
-    <script src="../../js/get-nhk-news.js"></script>
-    <script src="../../js/back-to-top-toggle.js"></script>
+    <script src="js/change-theme.js"></script>
+    <script src="js/sidebar-toggle.js"></script>
+    <script src="js/calendar.js"></script>
+    <script src="js/get-nhk-news.js"></script>
+    <script src="js/back-to-top-toggle.js"></script>
 
 </body>
 
