--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta property="og:title" content="Homepage - KORIN">
     <link href="https://upload.wikimedia.org/wikipedia/commons/3/34/Home-icon.svg" rel="icon">
     <link href="static/styles.css" rel="stylesheet">
+    <link rel="preload" href="static/printability_setup.png" as="image">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
