--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:description" content="KORIN's Homepage">
     <meta property="og:image" content="static/web_screenshot.png">
     <meta property="og:title" content="Homepage - KORIN">
-    <link href="static/home.png" rel="icon">
+    <link href="static/home.ico" rel="icon">
     <link href="static/styles.css" rel="stylesheet">
     <link rel="preload" href="static/printability_setup.png" as="image">
 
