--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
                     the shape of the needle, extrusion velocity, printability, and cell viability using numerical
                     analysis and machine
                     learning to control the fluid shear stress inside the needle.</p>
-                <figure>
-                    <p align="center">
+                <figure style="text-align: center;">
+                    <p>
                         <img src="static/printability_setup.png" alt="printability_setup" width="350">
-
                     </p>
-                    <figcaption align="center"><strong>Figure 1.</strong> The printability assessment setup is designed
+                    <figcaption><strong>Figure 1.</strong> The printability assessment setup is designed
                         to evaluate and optimize the performance of 3D bioprinting processes, such as bioink extrusion
                         and filament formation.
                     </figcaption>
