Update theme toggle

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <title>Homepage - KORIN</title>
 </head>
 
-<body>
+<body
+    class="<script>localStorage.getItem('darkMode') === 'true' ? document.write('dark') : document.write('')</script>">
     <div class="container-fluid">
         <div class="row">
             <aside class="col-lg">
