Update CS50 certificate url

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                 <h2>Course Certificates</h2>
                 <ul>
-                    <li><a href="https://cs50.harvard.edu/certificates/d2b0dff9-33df-4b19-b19a-7a6fa26ee40c">CS50x:
+                    <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x:
                             Introduction to Computer Science <i class="fas fa-external-link-alt"></i></a></li>
                     <li><a
                             href="https://www.coursera.org/account/accomplishments/verify/9QC5KA9F9STU?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=pdf_header_button&utm_product=course">Mathematics
