--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="templates/common/projects.html">Projects</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
+                                href="templates/common/research.html">Research</a></li>
+                        <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
                                 href="templates/common/gallery.html">Gallery</a></li>
                     </ul>
                     <hr>
