Update navbar layout

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     <hr>
                     <ul class="fa-ul">
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="templates/common/projects.html">Projects</a></li>
+                                href="templates/common/projects.html">🛠️ Projects</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="templates/common/research.html">Research</a></li>
+                                href="templates/common/research.html">⚗️ Research</a></li>
                         <li data-marker="*"><span class="fa-li"><i class="fas fa-square"></i></span><a
-                                href="templates/common/gallery.html">Gallery</a></li>
+                                href="templates/common/gallery.html">🖼️ Gallery</a></li>
                     </ul>
                     <hr>
                     <div class="centered-container">
@@ -151,7 +151,8 @@
                     The copyright of the dictionary belongs to Sanseido Co., Ltd., the creator of the dictionary.
                 </p>
 
-                <h2>Research Interests</h2>
+                <h2>Research Interests <a href="https://en.wikipedia.org/wiki/3D_bioprinting"><i
+                            class="fa-brands fa-wikipedia-w"></i></a></h2>
                 <p>3D extrusion bioprinting is rapidly developing in the field of tissue engineering, enabling the
                     manufacturing of customized biologically engineered structures. This research attempts to optimize
                     the shape of the needle, extrusion velocity, printability, and cell viability using numerical
