--- a/index.html
+++ b/index.html
@@ -104,18 +104,23 @@
             <main class="col-lg">
 
                 <h2>About Me</h2>
-                <p>I am a graduate student at Osaka University, where my research focuses primarily on computational
-                    fluid dynamics and 3D bioprinting. My academic journey began with a Bachelor's degree in Mechanical
-                    Engineering from the University of California, Santa Barbara. This solid foundation eventually led
-                    me to Japan, where I am now studying as a MEXT scholar.</p>
-                <p>Apart from my research commitments, I also support Osaka University's Main Library undergraduates. I
-                    am skilled in Python, OpenFOAM, JavaScript, HTML/CSS, and machine learning. The intersection of
-                    machine learning and biotechnology intrigues me, offering an exciting frontier of possibilities.</p>
-                <p>Aside from my academic pursuits, my interests are pretty diverse. I am an avid mountain climber,
-                    finding thrill and challenge in its demanding nature. Traveling is another passion of mine,
-                    providing me with a broader cultural perspective and enriching my worldview. I also fervently
-                    advocate lifelong learning, frequently engaging in online courses to broaden my skills. I often
-                    delve into various books to unwind, finding them an excellent source of relaxation and knowledge.
+                <p>I am a graduate student at Osaka University, specializing in computational fluid dynamics and 3D
+                    bioprinting. My passion for science and engineering took root in my childhood, and it was during my
+                    undergraduate studies in Mechanical Engineering at the University of California, Santa Barbara, I
+                    found a particular interest in computational problems. This intersection between science and
+                    computation led me to learn to program, opening up a whole new world of problem-solving techniques,
+                    including the powerful concept of computational thinking.</p>
+                <p>With skills in Python, C, JavaScript, HTML/CSS, and machine learning, I began to see how
+                    programming could revolutionize traditional engineering fields. The blend of machine learning and
+                    biotechnology, in particular, holds vast potential that I find truly exciting. As a MEXT scholar in
+                    Japan, I've had the opportunity to delve deeper into these areas while supporting Osaka University's
+                    Main Library undergraduates.</p>
+                <p>Beyond academia, I maintain a rich and varied set of interests. I find joy and challenge in mountain
+                    climbing, and I have a passion for traveling, which offers me a broader cultural perspective and
+                    enriches my understanding of the world. I firmly believe in lifelong learning, frequently immersing
+                    myself in online courses to expand my knowledge base. To unwind, I often lose myself in the pages of
+                    a good book, finding it a source of relaxation and wisdom. Through these experiences, I continue to
+                    grow as a student, researcher, and individual.
                 </p>
 
                 <h2>Project Demonstration</h2>
