Update copyright icon

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                     <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><i
                             class="fa-brands fa-square-js"></i></a>
                     <footer>
-                        <span style="font-size: smaller;">© 2023 KORIN. All rights reserved.</span>
+                        <span style="font-size: smaller;"><i class="fa-regular fa-copyright"></i> 2023 KORIN. All rights
+                            reserved.</span>
                     </footer>
                 </nav>
 
