--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                 <h2>Course Certificates</h2>
                 <ul>
-                    <li><a href="https://cs50.harvard.edu/certificates/dbcc370a-258d-479b-92f3-619ddf181f41">CS50AI:
+                    <li><a href="https://courses.edx.org/certificates/c71f1d7e284248b4a319b8a0022d2cea">CS50AI:
                             CS50's Introduction to Artificial Intelligence with Python <i
                                 class="fas fa-external-link-alt"></i></a></li>
                     <li><a href="https://courses.edx.org/certificates/ed6f315937ee4635a6aadef4830270ac">CS50x: CS50's
