--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="static/styles.css" rel="stylesheet">
     <link rel="preload" href="static/printability_setup.png" as="image">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
                         </li>
                         <li>
                             <a class="mr-1" href="https://twitter.com/japan_korin">
-                                <i aria-hidden="true" class="fab fa-twitter" title="Twitter"></i>
+                                <i aria-hidden="true" class="fa-brands fa-x-twitter" title="X"></i>
                                 Twitter
                             </a>
                         </li>
