Update educational background in About Me section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <main class="col-lg">
 
                 <h2>About Me</h2>
-                <p>I am a graduate student at Osaka University, specializing in computational fluid dynamics and 3D
+                <p>I am a Ph.D. student at Osaka University, specializing in computational fluid dynamics and 3D
                     bioprinting. My passion for science and engineering took root in my childhood, and it was during my
                     undergraduate studies in Mechanical Engineering at the University of California, Santa Barbara, I
                     found a particular interest in computational problems. This intersection between science and
